style.css
#display {
    display: grid;
    grid-template-columns: 1fr 8fr 1fr;
    grid-template-rows: 1fr 1fr 6fr 1fr;
}

#boardTitle {
    grid-column: 2 / 3;
    grid-row: 1 / 2;
    place-self: center;
}

#p1NameEntry {
    grid-column: 1 / 2;
    grid-row: 2 / 3;
    width: 130px;
    justify-self: start;
    align-self: start;
}

#p1NameSubmit {
    grid-column: 1 / 2;
    grid-row: 2 / 3;
    margin-bottom: 10px;
    justify-self: center;
    align-self: end;
}

#p2NameEntry {
    grid-column: 3 / 4;
    grid-row: 2 / 3;
    width: 130px;
    justify-self: start;
    align-self: start;
}

#p2NameSubmit {
    grid-column: 3 / 4;
    grid-row: 2 / 3;
    margin-bottom: 10px;
    justify-self: center;
    align-self: end;
}

#buttonHeader {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
    place-self: center;
}

#start {
    background-color: #00FFFF;
    line-height: 30px;
    padding: 10px;
    font-size: 24px;
    color: #333399;
    border-radius: 30px;
    margin: 10px;
    text-justify: center;
    place-self: center;
}

#restartButton {
    height: 54px;
    width: 146.72px;
    background-color: #00FFFF;
    line-height: 30px;
    padding: 10px;
    font-size: 24px;
    color: #333399;
    border-radius: 30px;
    margin: 10px;
    text-justify: center;
    justify-self: center;
}

#restart {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
    background-color: #00FFFF;
    line-height: 30px;
    padding: 10px;
    font-size: 24px;
    color: #333399;
    border-radius: 30px;
    margin: 10px;
    text-justify: center;
    justify-self: center;
}

#turnDisplay {
    grid-column: 2 / 3;
    grid-row: 4 / 5;
    place-self: center;
}

#buttonWrapper {
    display: grid;
    grid-row: 3 / 4;
    grid-column: 2 / 3;
    grid-template-columns: 3fr 3fr 3fr;
    grid-template-rows: 3fr 3fr 3fr;
    place-self: center;
}

.squareButtons {
    height: 200px;
    width: 200px;
    background-color: #AAFF99;
}

.disabled {
    background-color: #FFB3B3;
    color: black;
    font-size: 180px;
    place-self: center;
}

